Revert "Merge pull request #843 from elsa-workflows/codex/workflow-folders"
This reverts commit f049311984eb84111cab5cb003702678a7e611be, reversing
changes made to 6689f434bd385b37e129e5370cca9511694ac2f0.
