# src/Elsa/Workflows/Design/Api/Requests/ListWorkflowDefinitionPage.cs
@@ -1,13 +1,0 @@
-using Elsa.Mediator.Core.Contracts;
-using Elsa.Workflows.Design.Api.Models;
-
-namespace Elsa.Workflows.Design.Api.Requests;
-
-public sealed record ListWorkflowDefinitionPage(
-    int? PageSize = null,
-    string? ContinuationToken = null,
-    string? Search = null,
-    string? State = null,
-    string? FolderId = null,
-    bool? Unfiled = null)
-    : IRequest<WorkflowDefinitionPageView>;
